# wangzhe-chess

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT.md  README.md  REFACTOR_GUIDE.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  opencode.json  pyproject.toml
.claude/agents/: code-reviewer.md  designer.md  executor.md  knowledge-manager.md  planner.md  pm.md  qa.md  researcher.md
.claude/rules/: agent-scheduling-coverage.md  archive-requires-confirmation.md  documentation-first.md  output-dir-convention.md  test-with-code.md
.understand-anything/: knowledge-graph.json
config/: __init__.py  achievements.json  checkin-rewards.json  consumables.json  crafting-recipes.json  daily-tasks.json  emotes.json  equipment.json  heroes.json  logging.py  random-events.json  settings.py  skins.json  synergies.json  tutorials.json  votings.json
docs/: architecture.md  balance-analysis.md  code-review-m1.md  configuration.md  content-plan.md  core-classes.md  deployment.md  game-design-full.md  game-design.md  hero-design.md  operations.md  performance-report.md  team-workflow.md  technical-analysis.md
graphify-out/: GRAPH_REPORT.md
migrations/: env.py  script.py.mako
scripts/: auto-push.sh  backup.sh  deploy.sh
src/: __init__.py
tests/: __init__.py  conftest.py  test_achievement.py  test_ai_coach.py  test_battle.py  test_battle_v2.py  test_checkin.py  test_consumable.py  test_crafting.py  test_custom_room.py  test_daily_task.py  test_economy.py  test_emote.py  test_equipment.py  test_friendship.py  test_hero_pool.py  test_hero_shard.py  test_leaderboard.py  test_lineup.py  test_match.py  test_match.py.bak  test_models.py  test_random_event.py  test_replay.py  test_season.py  test_skin.py  test_spectator.py  test_synergy.py  test_synergypedia.py  test_talent.py  test_trading.py  test_tutorial.py  test_voting.py
web-client/: package-lock.json  package.json
(+188 files in other folders)
